Envio y recibido de Mensajes en el chat 07/05/2021

--- a/src/app/chat/principal/principal.component.html
+++ b/src/app/chat/principal/principal.component.html
@@ -1,7 +1,5 @@
-<div>
-<div *ngFor="let item of mensaje">
+<div *ngFor="let item of name.mensajes">
     <br *ngIf="item">
     {{item}}
     <br>
-</div>
 </div>
