--- a/src/app/chat/persona/persona.component.html
+++ b/src/app/chat/persona/persona.component.html
@@ -1,3 +1,6 @@
-<img [src]="'https://ui-avatars.com/api/?background=random&size=200&bold=true&uppercase=true&name=' + name">
+<div> 
+    <img [src]="'https://ui-avatars.com/api/?background=random&size=200&bold=true&uppercase=true&name=' + name">
+</div>
 <p>{{name}}</p>
+
 
